src/test/deca/syntax/invalid/custom/object/cnd_instance.deca
// Description:
//   Print condition with instanceof.
// Results:
//
//
// History:
//    created on 12/01/2022

{
   ans = a instancef b;
}
